# visual_horror

./: main.py  makefile  pyproject.toml  requirements.txt
game/: game_menu.py  level_settings.py
game/menu/: game_menu.py
game/text_box/: box.py
game/text_box/dialoges/: text.json
tests/: test_main.py
text/: dialoge.py
text_box/: box.py
text_box/dialoges/: text.json
